--- a/src/main/resources/postgres.properties
+++ b/src/main/resources/postgres.properties
@@ -8,6 +8,9 @@ database.password=password
 
 database.init=true
 
+jdbc.initLocation=initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+
+jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
