--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <version>${postgresql.version}</version>
         </dependency>
 
+        <!--JSTL-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
