--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <mvc.version>5.0.4.RELEASE</mvc.version>
         <hibernate.version>5.2.16.Final</hibernate.version>
         <postgresql.version>42.2.2</postgresql.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
@@ -79,6 +80,18 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
