--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -29,6 +30,7 @@
         <hibernate.version>5.2.16.Final</hibernate.version>
         <postgresql.version>42.2.2</postgresql.version>
         <junit.version>4.12</junit.version>
+        <hibernate-validator.version>6.0.5.Final</hibernate-validator.version>
     </properties>
 
     <dependencies>
@@ -58,7 +60,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>5.0.2.RELEASE</version>
+            <version>5.0.4.RELEASE</version>
         </dependency>
 
        <!-- Подключаем пул коннектов Tomcat JDBC Connection Pooling-->
@@ -82,6 +84,7 @@
             <version>1.2</version>
         </dependency>
 
+        <!--Tests-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -91,7 +94,15 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
+            <version>5.0.4.RELEASE</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--Валидация-->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
     </dependencies>
