--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <servletapi.version>2.5</servletapi.version>
-        <mvc.version>5.0.4.RELEASE</mvc.version>
+        <spring.version>5.0.4.RELEASE</spring.version>
         <hibernate.version>5.2.16.Final</hibernate.version>
         <postgresql.version>42.2.2</postgresql.version>
         <junit.version>4.12</junit.version>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${mvc.version}</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>5.0.4.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
        <!-- Подключаем пул коннектов Tomcat JDBC Connection Pooling-->
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>5.0.4.RELEASE</version>
+            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
 
