--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+        <!--Assert методы для тестов-->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <!--Валидация-->
         <dependency>
