--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <postgresql.version>42.2.2</postgresql.version>
         <junit.version>4.12</junit.version>
         <hibernate-validator.version>6.0.5.Final</hibernate-validator.version>
+        <jackson-json.version>2.9.3</jackson-json.version>
     </properties>
 
     <dependencies>
@@ -111,6 +112,24 @@
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator.version}</version>
         </dependency>
+
+        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+
 
     </dependencies>
 
